<resources>
    <string name="app_name">Recipe+</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="noLogin">Continue as Guest</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="firstname">Firstname :</string>
    <string name="lastname">Lastname :</string>
    <string name="username">Username :</string>
    <string name="ingredients"><i><u>Ingredients :</u></i></string>
    <string name="descript"><i><u>Description :</u></i></string>
    <string name="recipe"><i><u>Instructions :</u></i></string>
    <string name="recipe_name">Recipe Name :</string>
    <string name="recipe_desc">Description :</string>
    <string name="recipe_inst">Instructions :</string>
    <string name="recipe_save">Save Recipe</string>
    <string name="recipe_edit">Save Changes</string>

    <string name="images"><i><u>Images :</u></i></string>
    <string name="bad_login">Bad Credentials</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="profile_email">Email :</string>
    <string name="profile_name">Name :</string>
    <string name="add_image">Change Recipe Image</string>
    <string name="add_data">Recipe Data</string>
    <string name="add_ingredients">Ingredient List</string>
    <string name="creator"><i><u>Creator:</u></i></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>




</resources>