<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/nav_drawer"
    tools:context=".AddRecipeActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#3C3A3A"
        app:itemShapeFillColor="@color/flame"
        app:itemTextColor="@color/teal_200"
        app:menu="@menu/recipe_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/nav_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/liver"></androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_image">

                </TextView>

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/logo"
                    android:onClick="takePicture"
                    android:id="@+id/userPirture">

                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_data">

                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.RecipePlus.titles"
                        android:text="@string/recipe_name">

                    </TextView>
                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipeName">

                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.RecipePlus.titles"
                        android:text="@string/recipe_desc">

                    </TextView>
                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:id="@+id/recipeDesc">

                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="start"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.RecipePlus.titles"
                        android:text="@string/recipe_inst">

                    </TextView>
                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:id="@+id/recipeInst">

                    </EditText>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_ingredients">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/radio_ingredient"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:onClick="saveRecipe"
                    android:text="@string/recipe_save"
                    android:textColor="@color/white">

                </Button>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</androidx.drawerlayout.widget.DrawerLayout>