<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_drawer"
    android:gravity="start"

    tools:context=".ShowRecipeActivity"
    android:orientation="vertical">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#3C3A3A"
        app:itemShapeFillColor="@color/flame"
        app:itemTextColor="@color/teal_200"
        app:menu="@menu/recipe_menu" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/nav_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/liver"></androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:theme="@style/Theme.RecipePlus.recipeName"
                    android:id="@id/drinkName">
                </TextView>

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:id="@+id/drinkImage">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:text="@string/descript">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/Theme.RecipePlus.ingredients"
                    android:id="@+id/drinkDesc">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drinkIngredient"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:text="@string/recipe">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/Theme.RecipePlus.ingredients"
                    android:id="@+id/drinkInstruct">
                </TextView>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:theme="@style/Theme.RecipePlus.titles"
                    android:text="@string/images">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/Theme.RecipePlus.ingredients"
                    android:id="@+id/drinkImages">
                </TextView>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</androidx.drawerlayout.widget.DrawerLayout>